--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel='shortcut icon' href="assets/images/logo.webp">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet"> 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Access Granted | Home</title>
 </head>
@@ -152,7 +152,7 @@
                 <div>
                   <h5 class="card-title">Voice Assistant: Your Personal Guide</h5>
                   <h6 class="card-subtitle mb-2 text-muted">Meet Mikey the Mic!</h6>
-                  <p class="card-text">Unlock seamless navigation with our Voice Assistant, Mikey the Mic. Designed for individuals relying on assistive technology, this feature enables hands-free control and easy interaction through voice commands. Experience the web without barriers.</p>
+                  <p class="card-text text-body">Unlock seamless navigation with our Voice Assistant, Mikey the Mic. Designed for individuals relying on assistive technology, this feature enables hands-free control and easy interaction through voice commands. Experience the web without barriers.</p>
                 </div>
                 <div class="d-flex justify-content-end gap-3 align-items-center">
                   <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i> View</button>
@@ -168,7 +168,7 @@
                 <div>
                   <h5 class="card-title">OpenDyslexic: Read with Ease</h5>
                   <h6 class="card-subtitle mb-2 text-muted">Say Hi to Glassy with the Glasses!</h6>
-                  <p class="card-text">Enhance readability with the OpenDyslexic font, guided by Glassy with the Glasses. Perfect for users with dyslexia, this feature reduces visual stress and improves comprehension. Activate it to transform our text into a dyslexia-friendly format.</p>
+                  <p class="card-text text-body">Enhance readability with the OpenDyslexic font, guided by Glassy with the Glasses. Perfect for users with dyslexia, this feature reduces visual stress and improves comprehension. Activate it to transform our text into a dyslexia-friendly format.</p>
                 </div>
                 <div class="d-flex justify-content-end gap-3 align-items-center">
                   <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i> View</button>
@@ -184,7 +184,7 @@
                 <div>
                   <h5 class="card-title">High Contrast Mode: See It Clearly</h5>
                   <h6 class="card-subtitle mb-2 text-muted">Meet Spikey the Hedgehog!</h6>
-                  <p class="card-text">Improve visibility with High Contrast Mode, thanks to Spikey the Hedgehog. Ideal for users with color blindness or visual impairments, this feature increases text and image contrast for a clearer, more comfortable viewing experience.</p>
+                  <p class="card-text text-body">Improve visibility with High Contrast Mode, thanks to Spikey the Hedgehog. Ideal for users with color blindness or visual impairments, this feature increases text and image contrast for a clearer, more comfortable viewing experience.</p>
                 </div>
                 <div class="d-flex justify-content-end gap-3 align-items-center mt-auto">
                   <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i> View</button>
