Add high contrast classes to resources.html

--- a/resources.html
+++ b/resources.html
@@ -176,7 +176,7 @@
 
     <div class="container-fluid p-0">
       <!-- Voice Assistant Article -->
-      <article class="p-5" style="background-color: #f0f8ff;">
+      <article class="p-5 resources-voice-article">
         <div class="row">
           <div class="col-12">
             <h2 class="text-primary">Voice Assistant: Your Personal Guide</h2>
@@ -218,7 +218,7 @@
       </article>
 
       <!-- OpenDyslexic Article -->
-      <article class="p-5" style="background-color: #fff0f5;">
+      <article class="p-5 resources-dyslexia-article">
         <div class="row">
           <div class="col-12">
             <h2 class="text-danger">OpenDyslexic: Read with Ease</h2>
@@ -260,7 +260,7 @@
       </article>
 
       <!-- High Contrast Mode Article -->
-      <article class="p-5" style="background-color: #f5f5dc;">
+      <article class="p-5 resources-contrast-article">
         <div class="row">
           <div class="col-12">
             <h2 class="text-warning">High Contrast Mode: See It Clearly</h2>
