--- a/index.html
+++ b/index.html
@@ -102,10 +102,8 @@
                   <div class="dropdown-item">
                     <label for="themeSelect" class="form-label">Theme</label>
                     <select class="form-select" id="themeSelect" aria-label="Theme select">
-                      <option value="auto" data-bs-theme-value="auto">Auto</option>
                       <option value="light" data-bs-theme-value="light">Light</option>
-                      <option value="dark" data-bs-theme-value="dark">Dark</option>
-                      <option value="contrast" data-bs-theme-value="contrast">High Contrast</option>
+                      <option value="contrast" data-bs-theme-value="contrast">High Contrast (Dark)</option>
                     </select>
                   </div>
                 </li>
