Change theme switcher to toggle switch

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 <li>
                   <div class="dropdown-item">
                     <div class="form-check form-switch">
-                      <input class="form-check-input" type="checkbox" id="highContrast">
-                      <label class="form-check-label" for="highContrast">High Contrast</label>
+                      <input class="form-check-input theme-switch" type="checkbox" id="themeSwitch1" aria-label="Theme switch">
+                      <label class="form-check-label text-body" for="themeSwitch1">Turn on High Contrast Mode</label>
                     </div>
                   </div>
                 </li>
