Add more toggle switches

--- a/resources.html
+++ b/resources.html
@@ -272,8 +272,13 @@
         </div>
         <div class="row align-items-center">
           <div class="col-md-6">
-            <div class="bg-white p-3 rounded">
+            <div class="p-3 rounded">
               <img src="assets/images/contrast-icon.webp" alt="Spikey the Hedgehog" class="img-fluid mb-3">
+              <div class="form-check form-switch form-switch-lg d-flex align-items-center justify-content-center">
+                <input class="form-check-input theme-switch mt-0" type="checkbox" id="themeSwitch2"
+                  aria-label="Theme switch">
+                <label class="form-check-label ms-2 text-body" for="themeSwitch2">Turn on High Contrast Mode</label>
+              </div>
             </div>
           </div>
           <div class="col-md-6">
