--- a/index.html
+++ b/index.html
@@ -100,15 +100,6 @@
                     Guide</a></li>
                 <li>
                   <div class="dropdown-item">
-                    <label for="themeSelect" class="form-label">Theme</label>
-                    <select class="form-select" id="themeSelect" aria-label="Theme select">
-                      <option value="light" data-bs-theme-value="light">Light</option>
-                      <option value="contrast" data-bs-theme-value="contrast">High Contrast (Dark)</option>
-                    </select>
-                  </div>
-                </li>
-                <li>
-                  <div class="dropdown-item">
                     <label for="fontThemeSelect" class="form-label">Font Theme</label>
                     <select class="form-select" id="fontThemeSelect" aria-label="Font theme select">
                       <option value="default" data-font-theme-value="default">Default</option>
@@ -179,13 +170,16 @@
             <div class="card h-100 shadow-lg border-0 bg-feature-card">
               <img src="assets/images/contrast-icon.webp" class="card-img-top" alt="Feature 3 illustration">
               <div class="card-body p-4 d-flex flex-column justify-content-between">
-                <div>
+                <div class="mb-3">
                   <h5 class="card-title">High Contrast Mode: See It Clearly</h5>
                   <h6 class="card-subtitle mb-2 text-muted">Meet Spikey the Hedgehog!</h6>
                   <p class="card-text text-body">Improve visibility with High Contrast Mode, thanks to Spikey the Hedgehog. Ideal for users with color blindness or visual impairments, this feature increases text and image contrast for a clearer, more comfortable viewing experience.</p>
                 </div>
-                <div class="d-flex justify-content-end gap-3 align-items-center mt-auto">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i> View</button>
+                <div class="d-flex flex-column justify-content-end gap-2 align-items-end mt-auto">
+                  <div class="form-check form-switch form-switch-md d-flex">
+                    <input class="form-check-input theme-switch mt-0" type="checkbox" id="themeSwitch2" aria-label="Theme switch">
+                    <label class="form-check-label ms-2 text-body" for="themeSwitch2">Turn on High Contrast Mode</label>
+                  </div>
                   <button type="button" class="btn btn-sm btn-primary"><i class="fas fa-info-circle"></i> Learn More</button>
                 </div>
               </div>
