--- a/about.html
+++ b/about.html
@@ -126,54 +126,183 @@
 	  </header>
 	
 
-	  <main id="main-content" class="pt-5 main-content">
-        <h1 class="mb-4">About Us</h1>
-        <p class="lead mb-5">We are a team of passionate developers dedicated to making the web more accessible for everyone.</p>
-        
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-            <!-- Team Member 1 -->
-            <div class="col">
-                <div class="card h-100">
-                    <img src="placeholder-image-1.jpg" class="card-img-top" alt="Team Member 1">
-                    <div class="card-body">
-                        <h5 class="card-title">John Doe</h5>
-                        <p class="card-text">Frontend Developer with a passion for creating accessible user interfaces.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="https://github.com/johndoe" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-github"></i> GitHub
-                        </a>
-                        <a href="https://linkedin.com/in/johndoe" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-linkedin"></i> LinkedIn
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Team Member 2 -->
-            <div class="col">
-                <div class="card h-100">
-                    <img src="placeholder-image-2.jpg" class="card-img-top" alt="Team Member 2">
-                    <div class="card-body">
-                        <h5 class="card-title">Jane Smith</h5>
-                        <p class="card-text">Backend Developer specializing in scalable and secure web applications.</p>
-                    </div>
-                    <div class="card-footer">
-                        <a href="https://github.com/janesmith" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-github"></i> GitHub
-                        </a>
-                        <a href="https://linkedin.com/in/janesmith" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-linkedin"></i> LinkedIn
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Repeat the above card structure for the remaining x team members -->
-            <!-- Team Members 3-x -->
-
-        </div>
-    </main>
+	<main class="container my-5">
+		<section>
+		  <div class="row">
+			<div class="col-md-6">
+			  <img src="team.jpg" alt="Our Team" class="img-fluid rounded shadow-lg">
+			</div>
+			<div class="col-md-6">
+			  <h2>Our Mission</h2>
+			  <p>
+				Our mission is to create a more inclusive, accessible world for everyone.
+			  <br>
+			  <br>
+				We are a team of passionate developers dedicated to bring innovative solutions and foster a community built on values of collaboration and empathy.
+			  </p>
+			</div>
+		  </div>
+		</section>
+	  <main class="container my-5">
+		<section>
+			<h2 class="text-center mb-4">Meet Our Team</h2>
+			<div class="row g-4">
+				<!-- Card 1 -->
+				<div class="col-12 col-sm-6 col-md-6 col-lg-4">
+					<div class="card shadow-lg text-center flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="ceo.jpg" class="card-img-top" alt="">
+								<div class="card-body">
+									<h5 class="card-title">Vernell Clark</h5>
+									<p class="card-text">Project lead and git/github expert</p>
+								</div>
+							</div>
+							<div class="flip-card-back">
+								<div class="card-body">
+									<p>Project lead and git/github expert</p>
+									<a href="https://github.com/" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-github"></i> GitHub
+									</a>
+									<a href="https://linkedin.com/in/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-linkedin"></i> LinkedIn
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+	
+				<!-- Card 2 -->
+				<div class="col-12 col-sm-6 col-md-6 col-lg-4">
+					<div class="card shadow-lg text-center flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="ceo.jpg" class="card-img-top" alt="">
+								<div class="card-body">
+									<h5 class="card-title">Nikola Simic</h5>
+									<p class="card-text">aaaaa</p>
+								</div>
+							</div>
+							<div class="flip-card-back">
+								<div class="card-body">
+									<p>aaaa</p>
+									<a href="https://github.com/" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-github"></i> GitHub
+									</a>
+									<a href="https://linkedin.com/in/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-linkedin"></i> LinkedIn
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+	
+				<!-- Card 3 -->
+				<div class="col-12 col-sm-6 col-md-6 col-lg-4">
+					<div class="card shadow-lg text-center flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="ceo.jpg" class="card-img-top" alt="">
+								<div class="card-body">
+									<h5 class="card-title">Benjamin Schäfer</h5>
+									<p class="card-text">aaaaa</p>
+								</div>
+							</div>
+							<div class="flip-card-back">
+								<div class="card-body">
+									<p>aaaa</p>
+									<a href="https://github.com/" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-github"></i> GitHub
+									</a>
+									<a href="https://linkedin.com/in/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-linkedin"></i> LinkedIn
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+	
+				<!-- Card 4 -->
+				<div class="col-12 col-sm-6 col-md-6 col-lg-4">
+					<div class="card shadow-lg text-center flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="ceo.jpg" class="card-img-top" alt="">
+								<div class="card-body">
+									<h5 class="card-title">Angela Siniavskaja</h5>
+									<p class="card-text">aaaa</p>
+								</div>
+							</div>
+							<div class="flip-card-back">
+								<div class="card-body">
+									<p>aaaaa</p>
+									<a href="https://github.com/" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-github"></i> GitHub
+									</a>
+									<a href="https://linkedin.com/in/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-linkedin"></i> LinkedIn
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-sm-6 col-md-6 col-lg-4">
+					<div class="card shadow-lg text-center flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="ceo.jpg" class="card-img-top" alt="">
+								<div class="card-body">
+									<h5 class="card-title">Ashraf Bocktor</h5>
+									<p class="card-text">aaaa</p>
+								</div>
+							</div>
+							<div class="flip-card-back">
+								<div class="card-body">
+									<p>aaaaa</p>
+									<a href="https://github.com/" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-github"></i> GitHub
+									</a>
+									<a href="https://linkedin.com/in/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-linkedin"></i> LinkedIn
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-sm-6 col-md-6 col-lg-4">
+					<div class="card shadow-lg text-center flip-card">
+						<div class="flip-card-inner">
+							<div class="flip-card-front">
+								<img src="ceo.jpg" class="card-img-top" alt="">
+								<div class="card-body">
+									<h5 class="card-title">Ahmad Al Hindi</h5>
+									<p class="card-text">aaaa</p>
+								</div>
+							</div>
+							<div class="flip-card-back">
+								<div class="card-body">
+									<p>aaaaa</p>
+									<a href="https://github.com/" class="btn btn-outline-secondary btn-sm me-2" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-github"></i> GitHub
+									</a>
+									<a href="https://linkedin.com/in/" class="btn btn-outline-secondary btn-sm" target="_blank" rel="noopener noreferrer">
+										<i class="bi bi-linkedin"></i> LinkedIn
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+	
+			</div>
+		</section>
+	  </main>
+	</main>
 
 	<footer class="text-muted py-5">
 		<div class="container">
@@ -230,5 +359,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/script.js"></script>
+
 </body>
 </html>
