add privacy policy div

--- a/contact.html
+++ b/contact.html
@@ -131,6 +131,13 @@
 						<label for="message" class="form-label">Message</label>
 						<textarea class="form-control" id="message" name="message" rows="5" required></textarea>
 					</div>
+					<div class="mb-3 form-check">
+						<input type="checkbox" class="form-check-input" id="privacyCheck" required>
+						<label class="form-check-label" for="privacyCheck">
+							I have read and agree to the <a href=""
+								target="_blank">privacy policy</a>
+						</label>
+					</div>
 					<button type="submit" class="btn btn-primary">Send Message</button>
 				</form>
 			</div>
