--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
                 <li>
                   <div class="dropdown-item">
                     <div class="form-check form-switch">
-                      <input class="form-check-input" type="checkbox" id="dyslexicFont">
-                      <label class="form-check-label" for="dyslexicFont">Dyslexic Font</label>
+                      <input class="form-check-input font-switch" type="checkbox" id="fontSwitch1"
+                        aria-label="Font switch">
+                      <label class="form-check-label ms-2" for="fontSwitch1">Turn on Dyslexic Font</label>
                     </div>
                   </div>
                 </li>
@@ -98,15 +99,6 @@
                 </li>
                 <li><a class="dropdown-item" href="accessibility-guide.html"><i class="fas fa-book"></i> Accessibility
                     Guide</a></li>
-                <li>
-                  <div class="dropdown-item">
-                    <label for="fontThemeSelect" class="form-label">Font Theme</label>
-                    <select class="form-select" id="fontThemeSelect" aria-label="Font theme select">
-                      <option value="default" data-font-theme-value="default">Default</option>
-                      <option value="dyslexic" data-font-theme-value="dyslexic">Open Dyslexic</option>
-                    </select>
-                  </div>
-                </li>
               </ul>
             </li>
           </ul>
