--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
+                aria-expanded="false">
                 <i class="fas fa-universal-access"></i> Accessibility Features
               </a>
               <ul class="dropdown-menu p-3" aria-labelledby="navbarDropdown" style="width: 300px;">
@@ -62,7 +62,8 @@
                 <li>
                   <div class="dropdown-item">
                     <div class="form-check form-switch">
-                      <input class="form-check-input theme-switch" type="checkbox" id="themeSwitch1" aria-label="Theme switch">
+                      <input class="form-check-input theme-switch" type="checkbox" id="themeSwitch1"
+                        aria-label="Theme switch">
                       <label class="form-check-label text-body" for="themeSwitch1">Turn on High Contrast Mode</label>
                     </div>
                   </div>
@@ -108,7 +109,8 @@
   </header>
 
   <main id="main-content">
-    <section class="p-5 text-center text-md-end container-fluid main-background d-flex align-items-center" style="height: 80vh;">
+    <section class="p-5 text-center text-md-end container-fluid main-background d-flex align-items-center"
+      style="height: 80vh;">
       <div class="row w-100 align-items-center">
         <div class="col-lg-6 col-md-8 mx-auto">
           <h1>Welcome to Access Granted</h1>
@@ -123,7 +125,7 @@
       </div>
     </section>
 
-        <div class="album py-5" id="features">
+    <div class="album py-5" id="features">
       <div class="container mt-5">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
           <div class="col">
@@ -133,11 +135,15 @@
                 <div>
                   <h5 class="card-title">Voice Assistant: Your Personal Guide</h5>
                   <h6 class="card-subtitle mb-2 text-muted">Meet Mikey the Mic!</h6>
-                  <p class="card-text text-body">Unlock seamless navigation with our Voice Assistant, Mikey the Mic. Designed for individuals relying on assistive technology, this feature enables hands-free control and easy interaction through voice commands. Experience the web without barriers.</p>
+                  <p class="card-text text-body">Unlock seamless navigation with our Voice Assistant, Mikey the Mic.
+                    Designed for individuals relying on assistive technology, this feature enables hands-free control
+                    and easy interaction through voice commands. Experience the web without barriers.</p>
                 </div>
                 <div class="d-flex justify-content-end gap-3 align-items-center">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i> View</button>
-                  <button type="button" class="btn btn-sm btn-primary"><i class="fas fa-info-circle"></i> Learn More</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i>
+                    View</button>
+                  <button type="button" class="btn btn-sm btn-primary"><i class="fas fa-info-circle"></i> Learn
+                    More</button>
                 </div>
               </div>
             </div>
@@ -149,11 +155,15 @@
                 <div>
                   <h5 class="card-title">OpenDyslexic: Read with Ease</h5>
                   <h6 class="card-subtitle mb-2 text-muted">Say Hi to Glassy with the Glasses!</h6>
-                  <p class="card-text text-body">Enhance readability with the OpenDyslexic font, guided by Glassy with the Glasses. Perfect for users with dyslexia, this feature reduces visual stress and improves comprehension. Activate it to transform our text into a dyslexia-friendly format.</p>
+                  <p class="card-text text-body">Enhance readability with the OpenDyslexic font, guided by Glassy with
+                    the Glasses. Perfect for users with dyslexia, this feature reduces visual stress and improves
+                    comprehension. Activate it to transform our text into a dyslexia-friendly format.</p>
                 </div>
                 <div class="d-flex justify-content-end gap-3 align-items-center">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i> View</button>
-                  <button type="button" class="btn btn-sm btn-primary" id="enable-dyslexic"><i class="fas fa-info-circle"></i> Learn More</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i>
+                    View</button>
+                  <button type="button" class="btn btn-sm btn-primary" id="enable-dyslexic"><i
+                      class="fas fa-info-circle"></i> Learn More</button>
                 </div>
               </div>
             </div>
@@ -165,14 +175,18 @@
                 <div class="mb-3">
                   <h5 class="card-title">High Contrast Mode: See It Clearly</h5>
                   <h6 class="card-subtitle mb-2 text-muted">Meet Spikey the Hedgehog!</h6>
-                  <p class="card-text text-body">Improve visibility with High Contrast Mode, thanks to Spikey the Hedgehog. Ideal for users with color blindness or visual impairments, this feature increases text and image contrast for a clearer, more comfortable viewing experience.</p>
+                  <p class="card-text text-body">Improve visibility with High Contrast Mode, thanks to Spikey the
+                    Hedgehog. Ideal for users with color blindness or visual impairments, this feature increases text
+                    and image contrast for a clearer, more comfortable viewing experience.</p>
                 </div>
                 <div class="d-flex flex-column justify-content-end gap-2 align-items-end mt-auto">
                   <div class="form-check form-switch form-switch-md d-flex">
-                    <input class="form-check-input theme-switch mt-0" type="checkbox" id="themeSwitch2" aria-label="Theme switch">
+                    <input class="form-check-input theme-switch mt-0" type="checkbox" id="themeSwitch2"
+                      aria-label="Theme switch">
                     <label class="form-check-label ms-2 text-body" for="themeSwitch2">Turn on High Contrast Mode</label>
                   </div>
-                  <button type="button" class="btn btn-sm btn-primary"><i class="fas fa-info-circle"></i> Learn More</button>
+                  <button type="button" class="btn btn-sm btn-primary"><i class="fas fa-info-circle"></i> Learn
+                    More</button>
                 </div>
               </div>
             </div>
