added active page link for privacy policy

--- a/contact.html
+++ b/contact.html
@@ -134,7 +134,7 @@
 					<div class="mb-3 form-check">
 						<input type="checkbox" class="form-check-input" id="privacyCheck" required>
 						<label class="form-check-label" for="privacyCheck">
-							I have read and agree to the <a href=""
+							I have read and agree to the <a href="https://www.termsfeed.com/live/7364ab41-d9ad-459e-a730-f1882e830984"
 								target="_blank">privacy policy</a>
 						</label>
 					</div>
