--- a/index.html
+++ b/index.html
@@ -139,9 +139,7 @@
                     Designed for individuals relying on assistive technology, this feature enables hands-free control
                     and easy interaction through voice commands. Experience the web without barriers.</p>
                 </div>
-                <div class="d-flex justify-content-end gap-3 align-items-center">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i>
-                    View</button>
+                <div class="d-flex gap-3 align-items-center">
                   <button type="button" class="btn btn-sm btn-primary"><i class="fas fa-info-circle"></i> Learn
                     More</button>
                 </div>
@@ -159,9 +157,12 @@
                     the Glasses. Perfect for users with dyslexia, this feature reduces visual stress and improves
                     comprehension. Activate it to transform our text into a dyslexia-friendly format.</p>
                 </div>
-                <div class="d-flex justify-content-end gap-3 align-items-center">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i>
-                    View</button>
+                <div class="d-flex flex-column gap-3 align-items-start">
+                    <div class="form-check form-switch form-switch-md d-flex">
+                      <input class="form-check-input font-switch mt-0" type="checkbox" id="fontSwitch2"
+                        aria-label="Font switch">
+                      <label class="form-check-label ms-2" for="fontSwitch2">Turn on Dyslexic Font</label>
+                    </div>
                   <button type="button" class="btn btn-sm btn-primary" id="enable-dyslexic"><i
                       class="fas fa-info-circle"></i> Learn More</button>
                 </div>
@@ -179,7 +180,7 @@
                     Hedgehog. Ideal for users with color blindness or visual impairments, this feature increases text
                     and image contrast for a clearer, more comfortable viewing experience.</p>
                 </div>
-                <div class="d-flex flex-column justify-content-end gap-2 align-items-end mt-auto">
+                <div class="d-flex flex-column gap-3 align-items-start">
                   <div class="form-check form-switch form-switch-md d-flex">
                     <input class="form-check-input theme-switch mt-0" type="checkbox" id="themeSwitch2"
                       aria-label="Theme switch">
