Remove unessecary white backgrounds

--- a/resources.html
+++ b/resources.html
@@ -188,7 +188,7 @@
         </div>
         <div class="row align-items-center">
           <div class="col-md-6">
-            <div class="bg-white p-3 rounded">
+            <div class="p-3 rounded">
               <img src="assets/images/microphone-icon.webp" alt="Mikey the Mic" class="img-fluid mb-3">
             </div>
           </div>
@@ -230,7 +230,7 @@
         </div>
         <div class="row align-items-center flex-md-row-reverse">
           <div class="col-md-6">
-            <div class="bg-white p-3 rounded">
+            <div class="p-3 rounded">
               <img src="assets/images/glasses-icon.webp" alt="Glassy with the Glasses" class="img-fluid mb-3">
             </div>
           </div>
