Add the resources font switch

--- a/resources.html
+++ b/resources.html
@@ -232,6 +232,11 @@
           <div class="col-md-6">
             <div class="p-3 rounded">
               <img src="assets/images/glasses-icon.webp" alt="Glassy with the Glasses" class="img-fluid mb-3">
+              <div class="form-check form-switch form-switch-lg d-flex align-items-center justify-content-center">
+                      <input class="form-check-input font-switch" type="checkbox" id="fontSwitch2"
+                        aria-label="Font switch">
+                      <label class="form-check-label ms-2" for="fontSwitch2">Turn on Dyslexic Font</label>
+                    </div>
             </div>
           </div>
           <div class="col-md-6">
