Increase mt before the resource content

--- a/resources.html
+++ b/resources.html
@@ -174,7 +174,7 @@
     </div>
 
 
-    <div class="container-fluid p-0">
+    <div class="container-fluid p-0 mt-5">
       <!-- Voice Assistant Article -->
       <article class="p-5 resources-voice-article">
         <div class="row">
