improve dyslexic font button

--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
                     comprehension. Activate it to transform our text into a dyslexia-friendly format.</p>
                 </div>
                 <div class="d-flex flex-column gap-3 align-items-start">
-                    <div class="form-check form-switch form-switch-md d-flex">
-                      <input class="form-check-input font-switch mt-0" type="checkbox" id="fontSwitch2"
-                        aria-label="Font switch">
-                      <label class="form-check-label ms-2" for="fontSwitch2">Turn on Dyslexic Font</label>
-                    </div>
+                  <div class="form-check form-switch form-switch-md d-flex">
+                    <input class="form-check-input font-switch mt-0" type="checkbox" id="fontSwitch2"
+                      aria-label="Font switch">
+                    <label class="form-check-label ms-2 text-body" for="fontSwitch2">Turn on Dyslexic Font</label>
+                  </div>
                   <button type="button" class="btn btn-sm btn-primary" id="enable-dyslexic"><i
                       class="fas fa-info-circle"></i> Learn More</button>
                 </div>
