style accessibility standards section

--- a/resources.html
+++ b/resources.html
@@ -316,7 +316,7 @@
     <!-- Tabs Section -->
     <div class="container py-5">
       <h2 class="text-center mb-4">Accessibility Standards</h2>
-      <ul class="nav nav-tabs" id="awarenessTabs" role="tablist">
+      <ul class="nav nav-tabs justify-content-center" id="awarenessTabs" role="tablist">
         <li class="nav-item" role="presentation">
           <button class="nav-link active" id="wcag-tab" data-bs-toggle="tab" data-bs-target="#wcag" type="button"
             role="tab" aria-controls="wcag" aria-selected="true">WCAG</button>
@@ -332,16 +332,13 @@
       </ul>
       <div class="tab-content py-3" id="awarenessTabContent">
         <div class="tab-pane fade show active" id="wcag" role="tabpanel" aria-labelledby="wcag-tab">
-          <p>The Web Content Accessibility Guidelines (WCAG) provide guidelines for making web content accessible to
-            people with disabilities.</p>
+          <p>The <a href="https://www.w3.org/WAI/standards-guidelines/wcag/" target="_blank" rel="noopener noreferrer">Web Content Accessibility Guidelines (WCAG)</a> provide guidelines for making web content accessible to people with disabilities.</p>
         </div>
         <div class="tab-pane fade" id="aria" role="tabpanel" aria-labelledby="aria-tab">
-          <p>The Accessible Rich Internet Applications (ARIA) specifications help make dynamic content and advanced user
-            interface controls accessible.</p>
+          <p>The <a href="https://www.w3.org/WAI/standards-guidelines/aria/" target="_blank" rel="noopener noreferrer">Accessible Rich Internet Applications (ARIA)</a> specifications help make dynamic content and advanced user interface controls accessible.</p>
         </div>
         <div class="tab-pane fade" id="508" role="tabpanel" aria-labelledby="508-tab">
-          <p>Section 508 requires federal agencies to make their electronic and information technology accessible to
-            people with disabilities.</p>
+          <p><a href="https://www.section508.gov/" target="_blank" rel="noopener noreferrer">Section 508</a> requires federal agencies to make their electronic and information technology accessible to people with disabilities.</p>
         </div>
       </div>
     </div>
