Delete unused content from resources

--- a/resources.html
+++ b/resources.html
@@ -138,42 +138,6 @@
       </div>
     </section>
 
-    <!-- Carousel Section -->
-    <div id="awarenessCarousel" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="assets/images/accessibility-1.jpg" class="d-block w-100" alt="Accessibility concept 1">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Accessible Design Matters</h5>
-            <p>Learn how accessibility improves user experience for everyone.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="assets/images/accessibility-2.jpg" class="d-block w-100" alt="Accessibility concept 2">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Inclusion for All</h5>
-            <p>Accessibility helps make digital spaces inclusive for all.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="assets/images/accessibility-3.jpg" class="d-block w-100" alt="Accessibility concept 3">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Web for Everyone</h5>
-            <p>Designing accessible websites is essential in a digital-first world.</p>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#awarenessCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#awarenessCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-
-
     <div class="container-fluid p-0 mt-5">
       <!-- Voice Assistant Article -->
       <article class="p-5 resources-voice-article">
@@ -233,10 +197,9 @@
             <div class="p-3 rounded">
               <img src="assets/images/glasses-icon.webp" alt="Glassy with the Glasses" class="img-fluid mb-3">
               <div class="form-check form-switch form-switch-lg d-flex align-items-center justify-content-center">
-                      <input class="form-check-input font-switch" type="checkbox" id="fontSwitch2"
-                        aria-label="Font switch">
-                      <label class="form-check-label ms-2" for="fontSwitch2">Turn on Dyslexic Font</label>
-                    </div>
+                <input class="form-check-input font-switch" type="checkbox" id="fontSwitch2" aria-label="Font switch">
+                <label class="form-check-label ms-2" for="fontSwitch2">Turn on Dyslexic Font</label>
+              </div>
             </div>
           </div>
           <div class="col-md-6">
@@ -338,31 +301,9 @@
           <p>The <a href="https://www.w3.org/WAI/standards-guidelines/aria/" target="_blank" rel="noopener noreferrer">Accessible Rich Internet Applications (ARIA)</a> specifications help make dynamic content and advanced user interface controls accessible.</p>
         </div>
         <div class="tab-pane fade" id="508" role="tabpanel" aria-labelledby="508-tab">
-          <p><a href="https://www.section508.gov/" target="_blank" rel="noopener noreferrer">Section 508</a> requires federal agencies to make their electronic and information technology accessible to people with disabilities.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Simulation Section -->
-    <div class="container py-5">
-      <h2 class="text-center mb-4">Accessibility Simulation</h2>
-      <p class="lead text-center">Experience how users with various disabilities may interact with web content.</p>
-      <div class="row">
-        <div class="col-md-4">
-          <h3>Color Blindness</h3>
-          <p>Toggle color filters to simulate different types of color blindness and understand how contrast affects
-            readability.</p>
-          <button class="btn btn-secondary" onclick="simulateColorBlindness()">Simulate Color Blindness</button>
-        </div>
-        <div class="col-md-4">
-          <h3>Low Vision</h3>
-          <p>Use a screen magnifier to see how users with low vision interact with your site.</p>
-          <button class="btn btn-secondary" onclick="simulateLowVision()">Simulate Low Vision</button>
-        </div>
-        <div class="col-md-4">
-          <h3>Screen Reader</h3>
-          <p>Try a screen reader simulation to understand how visually impaired users navigate content.</p>
-          <button class="btn btn-secondary" onclick="simulateScreenReader()">Simulate Screen Reader</button>
+          <p><a href="https://www.section508.gov/" target="_blank" rel="noopener noreferrer">Section 508</a> requires
+            federal agencies to make their electronic and information technology accessible to people with disabilities.
+          </p>
         </div>
       </div>
     </div>
@@ -376,7 +317,6 @@
       <p>Have questions or need assistance? We're here to help!</p>
       <a href="contact.html" class="btn btn-primary btn-lg">Contact Us</a>
     </section>
-
   </main>
 
   <footer class="text-muted py-5">
