Update and style reference tabs

--- a/resources.html
+++ b/resources.html
@@ -295,10 +295,14 @@
       </ul>
       <div class="tab-content py-3" id="awarenessTabContent">
         <div class="tab-pane fade show active" id="wcag" role="tabpanel" aria-labelledby="wcag-tab">
-          <p>The <a href="https://www.w3.org/WAI/standards-guidelines/wcag/" target="_blank" rel="noopener noreferrer">Web Content Accessibility Guidelines (WCAG)</a> provide guidelines for making web content accessible to people with disabilities.</p>
+          <p>The <a href="https://www.w3.org/WAI/standards-guidelines/wcag/" target="_blank"
+              rel="noopener noreferrer">Web Content Accessibility Guidelines (WCAG)</a> provide guidelines for making
+            web content accessible to people with disabilities.</p>
         </div>
         <div class="tab-pane fade" id="aria" role="tabpanel" aria-labelledby="aria-tab">
-          <p>The <a href="https://www.w3.org/WAI/standards-guidelines/aria/" target="_blank" rel="noopener noreferrer">Accessible Rich Internet Applications (ARIA)</a> specifications help make dynamic content and advanced user interface controls accessible.</p>
+          <p>The <a href="https://www.w3.org/WAI/standards-guidelines/aria/" target="_blank"
+              rel="noopener noreferrer">Accessible Rich Internet Applications (ARIA)</a> specifications help make
+            dynamic content and advanced user interface controls accessible.</p>
         </div>
         <div class="tab-pane fade" id="508" role="tabpanel" aria-labelledby="508-tab">
           <p><a href="https://www.section508.gov/" target="_blank" rel="noopener noreferrer">Section 508</a> requires
