fixed email path

--- a/contact.html
+++ b/contact.html
@@ -214,12 +214,12 @@
 	</script>
 	<script>
 		(function () {
-			emailjs.init("8pCIEGd_mp5NJs52U"); // Replace with your EmailJS user ID
+			emailjs.init("5gsGyUiuw_447YsV1"); // Replace with your EmailJS user ID
 		})();
 
 		document.getElementById('contact-form').addEventListener('submit', function (event) {
 			event.preventDefault();
-			emailjs.sendForm('service_8g5rqe9', 'template_530aj3p', this)
+			emailjs.sendForm('service_su7cs7k', 'template_07y5g4o', this)
 				.then(function () {
 					window.location.href = 'thank-you.html';
 				}, function (error) {
