Add further reading links to content

--- a/resources.html
+++ b/resources.html
@@ -223,6 +223,12 @@
               information. Glassy's OpenDyslexic font reduces this difficulty, providing a clearer and more stable
               reading experience. By doing so, we're helping to break down barriers that many people face every day,
               which often go unnoticed by those without these challenges.</p>
+            <p>
+              <span>
+                If you want to find out more, go to
+              </span>
+              <a href="https://opendyslexic.org/" target="_blank" rel="noopener noreferrer">opendyslexic.org</a>
+            </p>
           </div>
         </div>
       </article>
@@ -271,6 +277,9 @@
               between certain colors. Spikey’s High Contrast Mode ensures that users with these visual impairments can
               still clearly see and interact with our content. It's a reminder that accessibility features are crucial
               for creating a truly inclusive web environment.</p>
+            <p>For more information, read this <a
+                href="https://uxdesign.cc/high-contrast-when-you-think-the-dark-mode-is-enough-d190218d4bba"
+                target="_blank" rel="noopener noreferrer">article</a> by Jahde Vaccani.</p>
           </div>
         </div>
       </article>
