Link up card buttons
also adds a link to the mikey the mic resource.html section

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <h1>Welcome to Access Granted</h1>
           <p class="fw-medium">We're dedicated to making the web accessible for everyone.</p>
           <p>
-            <a href="#features" class="btn btn-primary my-2">Explore Our Features</a>
+            <a href="#features" class="btn btn-lg btn-primary my-2">Explore Our Features</a>
           </p>
         </div>
         <div class="col-lg-6 col-md-8 mx-auto">
@@ -153,8 +153,9 @@
                     and easy interaction through voice commands. Experience the web without barriers.</p>
                 </div>
                 <div class="d-flex gap-3 align-items-center">
-                  <button type="button" class="btn btn-sm btn-primary"><i class="fas fa-info-circle"></i> Learn
-                    More</button>
+                  <a href="resources.html" class="btn btn-sm btn-primary"><i class="fas fa-info-circle"></i> Learn
+                    More</a>
+                  <a href="voice.html" class="btn btn-sm btn-secondary"><i class="fas fa-microphone"></i> Try it out</a>
                 </div>
               </div>
             </div>
@@ -176,8 +177,8 @@
                       aria-label="Font switch">
                     <label class="form-check-label ms-2 text-body" for="fontSwitch2">Turn on Dyslexic Font</label>
                   </div>
-                  <button type="button" class="btn btn-sm btn-primary" id="enable-dyslexic"><i
-                      class="fas fa-info-circle"></i> Learn More</button>
+                  <a href="resources.html#dyslexia" class="btn btn-sm btn-primary"><i class="fas fa-info-circle"></i>
+                    Learn More</a>
                 </div>
               </div>
             </div>
@@ -199,8 +200,8 @@
                       aria-label="Theme switch">
                     <label class="form-check-label ms-2 text-body" for="themeSwitch2">Turn on High Contrast Mode</label>
                   </div>
-                  <button type="button" class="btn btn-sm btn-primary"><i class="fas fa-info-circle"></i> Learn
-                    More</button>
+                  <a href="resources.html#high-contrast" class="btn btn-sm btn-primary"><i
+                      class="fas fa-info-circle"></i> Learn More</a>
                 </div>
               </div>
             </div>
