--- a/resources.html
+++ b/resources.html
@@ -154,6 +154,7 @@
           <div class="col-md-6">
             <div class="p-3 rounded">
               <img src="assets/images/microphone-icon.webp" alt="Mikey the Mic" class="img-fluid mb-3">
+              <a href="voice.html" class="btn btn-secondary btn-lg mt-3">Try It Out</a>
             </div>
           </div>
           <div class="col-md-6">
@@ -173,7 +174,7 @@
                 tailored to your needs.</li>
             </ul>
             <h4>Why It Matters:</h4>
-            <p>For many of us, using a mouse or keyboard is second nature, but those with visual impairments or mobility
+            <p id="dyslexia">For many of us, using a mouse or keyboard is second nature, but those with visual impairments or mobility
               issues face significant barriers. Mikey's voice commands provide an essential alternative, transforming
               how these users interact with digital content and ensuring they can access information just as easily as
               everyone else.</p>
@@ -227,7 +228,7 @@
               <span>
                 If you want to find out more, go to
               </span>
-              <a href="https://opendyslexic.org/" target="_blank" rel="noopener noreferrer">opendyslexic.org</a>
+              <a id="high-contrast" href="https://opendyslexic.org/" target="_blank" rel="noopener noreferrer">opendyslexic.org</a>
             </p>
           </div>
         </div>
