--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
+            <li class="nav-item mt-3">
               <a class="nav-link" href="resources.html"><i class="fas fa-book"></i> Resources</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mt-2">
               <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item mt-2">
               <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
             </li>
-            <li><button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas"
+            <li><button class="btn btn-secondary mt-3" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i
                   class="fas fa-universal-access"></i> Accessibility</button></li>
           </ul>
