--- a/about.html
+++ b/about.html
@@ -227,36 +227,32 @@
 	</main>
 
 	<footer class="text-muted py-5">
-		<div class="container">
+		<div class="container footerdiv">
 		  <div class="row">
-			<div class="col-md-4">
-			  <h5>Resources</h5>
-			  <ul class="list-unstyled">
-				<li><a href="#" class="text-muted">Documentation</a></li>
-				<li><a href="#" class="text-muted">Tutorials</a></li>
-				<li><a href="#" class="text-muted">Support</a></li>
-			  </ul>
-			</div>
 			<div class="col-md-4">
 			  <h5>Social</h5>
 			  <ul class="list-unstyled">
-				<li><a href="#" class="text-muted"><i class="bi bi-twitter"></i> Twitter</a></li>
-				<li><a href="#" class="text-muted"><i class="bi bi-facebook"></i> Facebook</a></li>
-				<li><a href="#" class="text-muted"><i class="bi bi-instagram"></i> Instagram</a></li>
+				<li><a href="https://github.com/VCGithubCode/access-granted" class="text-muted" target="_blank"
+					rel="noopener" aria-label="Visit our github repository page(Opens in a new tab)" aria-hidden="true"><i
+					  class="fa-brands fa-github"></i> Github</a></li>
+				<li><a href="https://app.slack.com/client/T0L30B202/C080JB3ETHU" class="text-muted" target="_blank"
+					rel="noopener" aria-label="Visit our Slack channel(Opens in a new tab)" aria-hidden="true"><i
+					  class="fa-brands fa-slack"></i> Slack</a></li>
 			  </ul>
 			</div>
 			<div class="col-md-4">
 			  <h5>Site Map</h5>
 			  <ul class="list-unstyled">
-				<li><a href="#" class="text-muted">Home</a></li>
-				<li><a href="#about" class="text-muted">About</a></li>
-				<li><a href="#features" class="text-muted">Features</a></li>
-				<li><a href="#contact" class="text-muted">Contact</a></li>
+				<li><a href="index.html" class="text-muted">Home</a></li>
+				<li><a href="about.html" class="text-muted">About</a></li>
+				<li><a href="resources.html" class="text-muted">Resources</a></li>
+				<li><a href="contact.html" class="text-muted">Contact</a></li>
+				<li><a href="accessibility-guide.html" class="text-muted">Accessibility guide</a></li>
 			  </ul>
 			</div>
 		  </div>
 		  <p class="float-end mb-1">
-			<a href="#">Back to top</a>
+			<a href="#"><i class="fas fa-arrow-up"></i> Back to top</a>
 		  </p>
 		  <p class="mb-1">&copy; 2024 Access Granted Project</p>
 		</div>
