--- a/accessibility-guide.html
+++ b/accessibility-guide.html
@@ -133,7 +133,7 @@
 			<div class="col-md-4">
 			  <h5>Site Map</h5>
 			  <ul class="list-unstyled">
-				<li><a href="#" class="text-muted">Home</a></li>
+				<li><a href="index.html" class="text-muted">Home</a></li>
 				<li><a href="about.html" class="text-muted">About</a></li>
 				<li><a href="resources.html" class="text-muted">Resources</a></li>
 				<li><a href="contact.html" class="text-muted">Contact</a></li>
